--- a/bower.json
+++ b/bower.json
@@ -18,6 +18,10 @@
     "test",
     "tests"
   ],
+  "dependencies": {
+		"angular": ">=1.2.0 <1.6.0",
+		"moment": ">=2.8.0 <3.0.0"
+	},
   "homepage": "https://github.com/cresjean/angular-dazhaohu",
   "description": "Get datetime and say Good morning / afternoon / evening in Chinese",
   "keywords": [
